# 3360-ray-tracer

./: .clangd  .gitignore  CMakeLists.txt  README.md  camera.h  cameras.json  color.h  features.txt  hittable.h  hittable_list.h  interval.h  main.cpp  main.h  material.h  ray.h  sphere.h  vec3.h
.cache/clangd/index/: main.cpp.04D0725EEF827365.idx
outputs/: bvh_test.cpp  triangle.cpp
src/: Sampler.h  aabb.h  bvh.h  camera.h  color.h  cpu_ray_integrator.h  gpu_utils.h  hittable.h  hittable_list.h  hybrid_render.h  image_loader.h  interval.h  load_obj.h  main.cc  main.cpp  main.h  material.h  pixel_state.h  ray.h  ray_integrator.h  ray_state.h  rect.h  renderer.h  scene.h  sphere.h  square.h  texture.h  timer.h  triangle.h  triangle_mesh.h  vec3.h  wavefront_renderer.h
src/core/: color.h  constants.h  interval.h  math_utils.h  random.h  ray.h  timer.h  vec3.h
src/geom/: aabb.h  bvh.h  hittable.h  mesh.h  rect.h  sphere.h  square.h  triangle.h
src/integrator/: cpu_ray_integrator.h  pixel_state.h  ray_integrator.h  ray_state.h  sampler.h
src/material/: material.cc  material.h  texture.h
src/renderer/: mega_kernel.h  wavefront.cc  wavefront.h
src/scene/: camera.h  image.h  scene.h
